k8s/apps/smart-home/home-assistant/svc.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
  ports:
    - name: http
      targetPort: http
      port: 8123
      protocol: TCP
    - name: code-server
      targetPort: code-server
      port: 8080
      protocol: TCP
