k8s/apps/smart-home/home-assistant/ingress.k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
    app.kubernetes.io/instance: home-assistant
spec:
  ingressClassName: ingress-internal-traefik
  rules:
    - host: home-assistant.emnt.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-assistant
                port:
                  name: http
